fix(Qbtn): if min/max width defined, IE11 has wrong icon in btn alignment

--- a/ui/src/components/media-player.sass
+++ b/ui/src/components/media-player.sass
@@ -118,8 +118,8 @@ $max-z-index : 5900
       transition: height 0.25s ease-out
 
     &--button
-      max-width: 40px !important
-      min-width: 40px !important
+      //max-width: 40px !important // IE11 button issue
+      //min-width: 40px !important // IE11 button issue
       max-height: 40px !important
       min-height: 40px !important
 
